Still fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: .1em;
+    padding-bottom: .3em;
   }
 
   
